--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "node-sass": "npm:sass@^1.49.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
